--- a/taco-cloud-rest/src/main/resources/application.yml
+++ b/taco-cloud-rest/src/main/resources/application.yml
@@ -3,8 +3,6 @@
 # Instead of having multiple profiles in one application.yml, we can have multiple .yml file, 
 # where each represents a profile. 
 # e.g., application-test.yml, application-prod.yml, etc.
-server: # not included in any profile, default config 
-  port: 8444
 
 ---
 
@@ -34,10 +32,14 @@ spring:
     # file: tacocloud.log # write to specific file 
 
 --- 
+
 # default profile 
 server:
-  port: 8443 
-spring: 
+  port: 8080 
+spring:   
+  jpa:
+    hibernate: 
+      ddl-auto: create
   profiles: default 
   datasource: 
     url: jdbc:h2:mem:dev_tacocloud
