Taco Cloud (Sending JMS Messages)

--- a/taco-cloud-rest/src/main/resources/application.yml
+++ b/taco-cloud-rest/src/main/resources/application.yml
@@ -4,6 +4,15 @@
 # where each represents a profile. 
 # e.g., application-test.yml, application-prod.yml, etc.
 
+spring: # configure JMS (artemis) 
+  artemis:
+    host: artemis.tacocloud.com
+    port: 61617
+    user: tacoweb
+    password: 13tm31n
+  jms:
+    template:
+      default-destination: tacocloud.order.queue
 ---
 
 # configuration for "prod" profile
