--- a/taco-cloud-rest/src/main/resources/application.yml
+++ b/taco-cloud-rest/src/main/resources/application.yml
@@ -4,15 +4,16 @@
 # where each represents a profile. 
 # e.g., application-test.yml, application-prod.yml, etc.
 
-spring: # configure JMS (artemis) 
-  artemis:
-    host: artemis.tacocloud.com
-    port: 61617
-    user: tacoweb
+spring: #  configure RabbitMQ (AMQP)
+  rabbitmq: 
+    host: rabbit.tacocloud.com
+    port: 5673
+    username: tacoweb
     password: 13tm31n
-  jms:
-    template:
-      default-destination: tacocloud.order.queue
+    template: # configure default exchange and routing 
+      exchange: tacocloud.orders
+      routing-key: kitchens.central
+      receive-timeout: 30000 # block and wait for messaging for N ms
 ---
 
 # configuration for "prod" profile
@@ -27,18 +28,6 @@ spring:
     url: jdbc:mysql://localhost:3306/tacocloud
     username: tacodb
     password: tacopw
-    # driver-class-name: com.mysql.jdbc.Driver # optional 
-    # schema:  # optional, since these scripts are scanned automatically
-    # - schema.sql 
-    # data:
-    # - data.sql
-    # jndi-name: java:/comp/env/jdbc/tacoCloudDs # Use JDNI, this will overrides all config above 
-# logging:
-  # level:
-    # root: WARN
-    # org.springframework.security: DEBUG
-    # path: /var/logs  
-    # file: tacocloud.log # write to specific file 
 
 --- 
 
